--- a/src/app/[locale]/global.css
+++ b/src/app/[locale]/global.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1,
+h2,
+h3,
+p {
+  color: "black";
+}
+
+.dark h1,
+.dark h2,
+.dark h3,
+.dark p,
+.dark select,
+.dark a {
+  color: #ffffff;
+}
